# prompt-sentry

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  production.env.example  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: detection_gap.md  false_positive.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  events.py  routes.py
app/core/: __init__.py  config.py  decisions.py  errors.py  headers.py  ratelimit.py  security.py
app/detectors/: __init__.py  llm_classifier.py  normalizer.py  rules.py
app/logging/: __init__.py  audit.py
app/middleware/: __init__.py  firewall.py  inspection.py
app/models/: __init__.py  schemas.py
app/policies/: __init__.py  tool_calls.py
app/redteam/: __init__.py  library.py  runner.py
app/sanitizers/: __init__.py  text.py
app/scoring/: __init__.py  risk.py
attack_library/: credential_exfil.jsonl  direct.jsonl  goal_hijack.jsonl  identity_spoofing.jsonl  indirect.jsonl  jailbreaks.jsonl  obfuscated.jsonl
dashboard/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  proxy.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/events/: route.ts
dashboard/components/: ActionBadge.tsx  Charts.tsx  EventFeed.tsx  KpiCard.tsx  RedTeamPanel.tsx  RiskScore.tsx
dashboard/lib/: api.ts  colors.ts  server-api.ts  types.ts
docs/: AGENT_INTEGRATIONS.md  API_CONTRACT.md  BENCHMARK.md  DEPLOYMENT.md  RED_TEAMING.md  RESEARCH_REPORT.md  SUMMARY.md  THREAT_MODEL.md  benchmark-results.md  report.css
examples/: 01_basic_chatbot.py  02_rag_pipeline.py  03_tool_calling_agent.py  04_fastapi_middleware.py  firewall_client.py
examples/integrations/: 01_langchain_agent.py  02_llamaindex_rag.py  03_openai_tool_calling.py  04_anthropic_tool_use.py  05_crewai.py  06_mcp_protection.py
migrations/: 001_create_audit_events.sql
prompt_sentry/: __init__.py  client.py  exceptions.py  models.py
prompt_sentry/benchmark/: __init__.py  agents.py  cli.py  grading.py  guard.py  harnesses.py  live.py  loader.py  models.py  profiles.py  replay.py  reporting.py  runner.py  sandbox.py
prompt_sentry/benchmark/cases/: realistic_agent_v1.jsonl  realistic_agent_v2.jsonl
prompt_sentry/benchmark/data/: keyword_filter_v1.json
prompt_sentry/benchmark/snapshots/: anthropic_realistic_agent_v2.json
prompt_sentry/integrations/: __init__.py  anthropic.py  crewai.py  langchain.py  llamaindex.py  mcp.py  openai.py
tests/fixtures/: mcp_echo_server.py
tests/integration/: test_api.py  test_api_hardening.py  test_benchmark.py  test_live_agents.py  test_mcp_transports.py  test_red_team_ci.py
tests/sdk/: test_client.py  test_framework_adapters.py  test_installed_frameworks.py  test_provider_agents.py
tests/unit/: test_benchmark.py  test_edge_cases.py  test_firewall.py  test_normalizer.py  test_production_infrastructure.py  test_scenarios.py
(+2 files in other folders)
