[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "prompt_sentry*"]

[tool.setuptools.package-data]
prompt_sentry = ["benchmark/cases/*.jsonl"]

[project]
name = "prompt-sentry"
version = "0.1.0"
description = "Security middleware for LLM applications — detects and blocks prompt injection attacks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic-settings>=2.3,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
promptsentry-benchmark = "prompt_sentry.benchmark.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "ruff>=0.5,<1.0",
]
llm = [
    "anthropic>=0.40,<1.0",
]
langchain = [
    "langchain>=1.0,<2.0",
]
llamaindex = [
    "llama-index-core>=0.12,<1.0",
]
openai-agent = [
    "openai>=1.30,<3.0",
]
anthropic-agent = [
    "anthropic>=0.40,<1.0",
]
crewai = [
    "crewai>=1.0,<2.0",
]
mcp = [
    "mcp>=1.26,<2.0",
]
agents = [
    "langchain>=1.0,<2.0",
    "llama-index-core>=0.12,<1.0",
    "openai>=1.30,<3.0",
    "anthropic>=0.40,<1.0",
    "crewai>=1.0,<2.0",
    "mcp>=1.26,<2.0",
]
llm-openai = [
    "openai>=1.30,<3.0",
]
llm-bedrock = [
    "boto3>=1.34,<2.0",
]
dashboard = [
    "httpx>=0.27,<1.0",
]
production = [
    "psycopg[binary,pool]>=3.2,<4.0",
    "redis>=5.0,<7.0",
]
all = [
    "anthropic>=0.40,<1.0",
    "openai>=1.30,<3.0",
    "boto3>=1.34,<2.0",
    "httpx>=0.27,<1.0",
    "psycopg[binary,pool]>=3.2,<4.0",
    "redis>=5.0,<7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live_integration: requires explicit opt-in and paid provider credentials",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
